--- a/css/all.scss
+++ b/css/all.scss
@@ -7,6 +7,10 @@ body{
 .navbar{
     width: 100vw;
     position: fixed;
+    z-index: 100;
+    .navbar-nav{
+        width: 250px;
+    }
 }
 
 .nav-link{
