--- a/css/_style.scss
+++ b/css/_style.scss
@@ -1,6 +1,10 @@
 .bg-primary{
     background-color: $themecolor-primary !important;
 }
+.bg-secondary{
+    background-color: $themecolor-secondary !important;
+}
+
 
 
 
