--- a/css/all.css
+++ b/css/all.css
@@ -2,6 +2,10 @@
   background-color: #7CC5C3 !important;
 }
 
+.bg-secondary {
+  background-color: #C9FCFB !important;
+}
+
 .text-whie {
   color: #fff;
 }
@@ -97,7 +101,6 @@
   border: 2px dashed #7CC5C3;
   width: 110px;
   height: 110px;
-  background-color: gray;
   background-position: center;
   background-size: cover;
 }
@@ -131,5 +134,9 @@
 .subtitle p {
   font-weight: bold;
   font-size: 24px;
+}
+
+.plug-in {
+  border: 1px solid black;
 }
 /*# sourceMappingURL=all.css.map */
