--- a/css/all.scss
+++ b/css/all.scss
@@ -71,7 +71,7 @@
             border: 2px dashed $themecolor-primary;
             width: 110px;
             height: 110px;
-            background-color: gray;
+            // background-color: gray;
             // background-image: url(../img/daily/01.jpg);
             background-position: center;
             background-size: cover;
@@ -104,5 +104,8 @@
     }
 }
 
+.plug-in{
+    border: 1px solid black;
+}
 
 
