--- a/css/all.scss
+++ b/css/all.scss
@@ -215,16 +215,16 @@ html{
 .fake-anchor{
     width: 50px;
     height: 10px;
-    // background-color: aquamarine; 
+    background-color: aquamarine; 
 
     position: absolute;
     left: 0;
 }
 
-#anchor1{
+#about{
     top: -26px;
 }
-#anchor2,#anchor3{
+#family,#guestbook{
     top: -10px;
 }
 
