--- a/css/all.css
+++ b/css/all.css
@@ -318,15 +318,16 @@ html {
 .fake-anchor {
   width: 50px;
   height: 10px;
+  background-color: aquamarine;
   position: absolute;
   left: 0;
 }
 
-#anchor1 {
+#about {
   top: -26px;
 }
 
-#anchor2, #anchor3 {
+#family, #guestbook {
   top: -10px;
 }
 /*# sourceMappingURL=all.css.map */
