--- a/css/_mixin.scss
+++ b/css/_mixin.scss
@@ -3,3 +3,23 @@
         @content;
     }
 }
+@mixin lg {
+    @media (min-width:992px) {
+        @content;
+    }
+}
+@mixin md {
+    @media (min-width:768px) {
+        @content;
+    }
+}
+@mixin sm{
+    @media (min-width:576px) {
+        @content;
+    }
+}
+@mixin xsm{
+    @media (min-width:375px) {
+        @content;
+    }
+}
