--- a/css/all.css
+++ b/css/all.css
@@ -122,9 +122,24 @@ html {
 }
 
 .main .info_content {
+  width: 100%;
   font-size: 1.2rem;
   border: 3px dashed #7CC5C3;
-  padding: 20px 50px;
+  padding: 20px 30px;
+}
+
+@media (min-width: 576px) {
+  .main .info_content {
+    width: 90%;
+    padding: 20px 50px;
+  }
+}
+
+@media (min-width: 768px) {
+  .main .info_content {
+    width: 80%;
+    padding: 20px 100px;
+  }
 }
 
 .main .info_content .item {
@@ -318,7 +333,6 @@ html {
 .fake-anchor {
   width: 50px;
   height: 10px;
-  background-color: aquamarine;
   position: absolute;
   left: 0;
 }
