--- a/css/all.scss
+++ b/css/all.scss
@@ -87,9 +87,18 @@ html{
 
 .main{
     .info_content{
+        width: 100%; 
         font-size: 1.2rem;
         border: 3px dashed $themecolor-primary;
-        padding: 20px 50px;
+        padding: 20px 30px;
+        @include sm{
+            width: 90%;
+            padding: 20px 50px;
+        }
+        @include md{
+            width: 80%;
+            padding: 20px 100px;
+        }
         .item{
             font-weight: bold;
         }
@@ -215,7 +224,7 @@ html{
 .fake-anchor{
     width: 50px;
     height: 10px;
-    background-color: aquamarine; 
+    // background-color: aquamarine; 
 
     position: absolute;
     left: 0;
