--- a/css/_loading.scss
+++ b/css/_loading.scss
@@ -2,6 +2,9 @@
     width:100%;
     height:100vh;
     background:radial-gradient($themecolor-primary,$themecolor-secondary);
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .loading_inner{
     width:200px;
