--- a/css/all.css
+++ b/css/all.css
@@ -34,6 +34,9 @@
   width: 100%;
   height: 100vh;
   background: radial-gradient(#7CC5C3, #C9FCFB);
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .loading_inner {
