--- a/css/all.scss
+++ b/css/all.scss
@@ -104,6 +104,8 @@ html {
 
 
 .main {
+    width: 99vw;
+    overflow: hidden;
     .info_content {
         width: 100%;
         font-size: 1.2rem;
